2017-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Include system-wide exchange rates file to avoid issues with missing currencies and the need to ask first-time users questions
	* Reactivate deactivated global variables, units and functions after conflicting local object has been removed

2017-08-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Set argument min/max from requested integer type

2017-08-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fixes for MS Windows (now compiles, and runs without apparent issues, with MinGW)

2017-08-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Rewritten date functions with support for larger numbers
	* Check if variable exists in save (:=) function
	* Fix case insensitive comparison where upper and lower case string have different length

2017-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use libcurl instead of gvfs/wget
	* Remove glib dependency (require instead iconv and icu)

2017-08-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Handle errors on thread read and write (seems to solve issue #38)

2017-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix max decimals

2017-07-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use default evaluation options with approximate calculation in plot function
	* Use GMP and MPFR instead of CLN

2017-07-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix 3(x+1)(x+y)^3 to factors = 81((x + y) / 3)^3 * (x + 1)

2017-07-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix engineering exp mode in qalc and allow divisors other than 3
	* Do not round digits before decimal point for exact values with exp mode off
	* Fix sin(pi+x) and cos(pi+x)

2017-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix multiplication of matrix by (row) vector

2017-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpret 1e.1 as 1^10*0.1 instead of 1*e*0.1, and enable use of 'e' as unknown
